sql-check/tests/compile_fail/mysql/invalid_sql_syntax.rs
use sql_check::check;

fn main() {
    let _sql = check!("SELEC * FROM");
}
